Fix overlapping elements

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -72,7 +72,7 @@
   position: absolute;
   top: 0;
   left: 50%;
-  z-index: 3;
+  z-index: var(--z-index-lg);
 
   text-align: right;
 }
