--- a/src/components/Search/Search.module.css
+++ b/src/components/Search/Search.module.css
@@ -9,7 +9,7 @@
   grid-template-columns: 1fr;
 
   position: relative;
-  z-index: 1;
+  z-index: var(--z-index-sm);
 }
 
 .search__form {
@@ -36,9 +36,6 @@
 
     padding: var(--spacing-md);
     grid-template-columns: 3fr 5fr;
-
-    position: relative;
-    z-index: 1;
   }
 
   .search__form {
